--- a/config/broker/rbac/broker.yaml
+++ b/config/broker/rbac/broker.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Google LLC
+# Copyright 2020 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,20 +12,49 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Service account used by GCP broker data plane.
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: controller
+  name: broker
   namespace: cloud-run-events
   labels:
     events.cloud.google.com/release: devel
 
 ---
 
-apiVersion: v1
-kind: ServiceAccount
+# Role for GCP broker data plane.
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
 metadata:
-  name: webhook
+  name: cloud-run-events-broker
   namespace: cloud-run-events
   labels:
     events.cloud.google.com/release: devel
+rules:
+- apiGroups:
+    - ""
+  resources:
+    - configmaps
+  verbs:
+    - get
+    - list
+    - watch
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: cloud-run-events-broker
+  namespace: cloud-run-events
+  labels:
+    events.cloud.google.com/release: devel
+subjects:
+- kind: ServiceAccount
+  name: broker
+  namespace: cloud-run-events
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: cloud-run-events-broker
