--- a/config/core/resources/channel.yaml
+++ b/config/core/resources/channel.yaml
@@ -39,6 +39,12 @@ spec:
   subresources:
     status: {}
   preserveUnknownFields: false
+  conversion:
+    strategy: Webhook
+    webhookClientConfig:
+      service:
+        name: webhook
+        namespace: cloud-run-events
   additionalPrinterColumns:
     - name: Ready
       type: string
