--- a/config/broker/rbac/broker.yaml
+++ b/config/broker/rbac/broker.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Google LLC
+# Copyright 2020 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,10 +12,22 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Service account used by GCP broker data plane.
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: broker
+  namespace: cloud-run-events
+  labels:
+    events.cloud.google.com/release: devel
+
+---
+
+# Role for GCP broker data plane.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: cloud-run-events-controller
+  name: cloud-run-events-broker
   namespace: cloud-run-events
   labels:
     events.cloud.google.com/release: devel
@@ -23,14 +35,26 @@ rules:
 - apiGroups:
     - ""
   resources:
-    - secrets
     - configmaps
-  verbs: &everything
+  verbs:
     - get
     - list
     - watch
-    - create
-    - update
-    - patch
-    - delete
 
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: cloud-run-events-broker
+  namespace: cloud-run-events
+  labels:
+    events.cloud.google.com/release: devel
+subjects:
+- kind: ServiceAccount
+  name: broker
+  namespace: cloud-run-events
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: cloud-run-events-broker
