--- a/config/broker/services/broker.yaml
+++ b/config/broker/services/broker.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 Google LLC
+# Copyright 2020 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,25 +12,19 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+apiVersion: v1
+kind: Service
 metadata:
-  name: cloud-run-events-controller
+  name: broker-ingress
   namespace: cloud-run-events
   labels:
     events.cloud.google.com/release: devel
-rules:
-- apiGroups:
-    - ""
-  resources:
-    - secrets
-    - configmaps
-  verbs: &everything
-    - get
-    - list
-    - watch
-    - create
-    - update
-    - patch
-    - delete
-
+spec:
+  selector:
+    app: cloud-run-events
+    role: broker-ingress
+  ports:
+    - name: http
+      port: 80
+      protocol: TCP
+      targetPort: 8080
