Add conversion webhook to Channel.

--- a/config/core/resources/channel.gofmt.yaml
+++ b/config/core/resources/channel.gofmt.yaml
@@ -40,6 +40,7 @@ spec:
   subresources:
     status: {}
   preserveUnknownFields: false
+  {{- replace_with 2 "conversion_webhook" }}
   additionalPrinterColumns:
     - name: Ready
       type: string
