--- a/config/core/resources/cloudbuildsource.yaml
+++ b/config/core/resources/cloudbuildsource.yaml
@@ -58,6 +58,7 @@ spec:
       storage: true
   validation:
     openAPIV3Schema:
+      type: object
       properties:
         spec:
           type: object
