Add observability package with setup and teardown functions
Adds SetupDynamicConfig which is used for setting up and tearing down logging, metrics, and tracing
across all broker components.

--- a/config/broker/deployments/broker.yaml
+++ b/config/broker/deployments/broker.yaml
@@ -40,6 +40,16 @@ spec:
           value: /var/secrets/google/key.json        
         - name: PORT
           value: "8080"
+        - name: SYSTEM_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: CONFIG_LOGGING_NAME
+          value: config-logging
+        - name: CONFIG_OBSERVABILITY_NAME
+          value: config-observability
+        - name: METRICS_DOMAIN
+          value: cloud.google.com/events
         volumeMounts:
         - name: broker-config
           mountPath: /var/run/cloud-run-events/broker
