--- a/config/broker/deployments/broker.yaml
+++ b/config/broker/deployments/broker.yaml
@@ -49,7 +49,7 @@ spec:
         - name: CONFIG_OBSERVABILITY_NAME
           value: config-observability
         - name: METRICS_DOMAIN
-          value: cloud.google.com/events
+          value: knative.dev/internal/eventing
         volumeMounts:
         - name: broker-config
           mountPath: /var/run/cloud-run-events/broker
@@ -114,7 +114,7 @@ spec:
         - name: CONFIG_OBSERVABILITY_NAME
           value: config-observability
         - name: METRICS_DOMAIN
-          value: cloud.google.com/events
+          value: knative.dev/internal/eventing
         volumeMounts:
         - name: broker-config
           mountPath: /var/run/cloud-run-events/broker
@@ -177,7 +177,7 @@ spec:
         - name: CONFIG_OBSERVABILITY_NAME
           value: config-observability
         - name: METRICS_DOMAIN
-          value: cloud.google.com/events
+          value: knative.dev/internal/eventing
         volumeMounts:
         - name: broker-config
           mountPath: /var/run/cloud-run-events/broker
