--- a/config/core/deployments/controller.yaml
+++ b/config/core/deployments/controller.yaml
@@ -55,6 +55,12 @@ spec:
           value: config-leader-election
         - name: METRICS_DOMAIN
           value: cloud.google.com/events
+        - name: BROKER_CELL_INGRESS_IMAGE
+          value: ko://github.com/google/knative-gcp/cmd/broker/ingress
+        - name: BROKER_CELL_FANOUT_IMAGE
+          value: ko://github.com/google/knative-gcp/cmd/broker/fanout
+        - name: BROKER_CELL_RETRY_IMAGE
+          value: ko://github.com/google/knative-gcp/cmd/broker/retry
         volumeMounts:
         - name: google-cloud-key
           mountPath: /var/secrets/google
