--- a/config/core/roles/clusterrole.yaml
+++ b/config/core/roles/clusterrole.yaml
@@ -128,6 +128,13 @@ rules:
     - patch
 
 - apiGroups:
+    - internal.events.cloud.google.com
+  resources:
+    - brokercells
+    - brokercells/status
+  verbs: *everything
+
+- apiGroups:
     - eventing.knative.dev
   resources:
     - brokers
