Increase fanout concurrency in installation yaml

--- a/config/broker/deployments/broker.yaml
+++ b/config/broker/deployments/broker.yaml
@@ -109,6 +109,10 @@ spec:
           valueFrom:
               fieldRef:
                 fieldPath: metadata.name
+        - name: MAX_CONCURRENCY_PER_EVENT
+          value: "1000"
+        - name: HANDLER_CONCURRENCY
+          value: "10"
         - name: CONFIG_LOGGING_NAME
           value: config-logging
         - name: CONFIG_OBSERVABILITY_NAME
