--- a/config/broker/deployments/broker.yaml
+++ b/config/broker/deployments/broker.yaml
@@ -44,12 +44,16 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
         - name: CONFIG_LOGGING_NAME
           value: config-logging
         - name: CONFIG_OBSERVABILITY_NAME
           value: config-observability
         - name: METRICS_DOMAIN
-          value: cloud.google.com/events
+          value: knative.dev/internal/eventing
         volumeMounts:
         - name: broker-config
           mountPath: /var/run/cloud-run-events/broker
@@ -118,7 +122,7 @@ spec:
         - name: CONFIG_OBSERVABILITY_NAME
           value: config-observability
         - name: METRICS_DOMAIN
-          value: cloud.google.com/events
+          value: knative.dev/internal/eventing
         volumeMounts:
         - name: broker-config
           mountPath: /var/run/cloud-run-events/broker
@@ -181,7 +185,7 @@ spec:
         - name: CONFIG_OBSERVABILITY_NAME
           value: config-observability
         - name: METRICS_DOMAIN
-          value: cloud.google.com/events
+          value: knative.dev/internal/eventing
         volumeMounts:
         - name: broker-config
           mountPath: /var/run/cloud-run-events/broker
