Add Mako benchmark keys

--- a/test/performance/benchmarks/broker-gcp/prod.config
+++ b/test/performance/benchmarks/broker-gcp/prod.config
@@ -6,7 +6,7 @@
 project_name: "Knative"
 benchmark_name: "GCP Broker Latency & Throughput"
 description: "Measure latency and throughput of the Google Cloud Broker"
-benchmark_key: ''
+benchmark_key: '6352219144192000'
 
 # Human owners for manual benchmark adjustments.
 owner_list: "grantrodgers@google.com"
