--- a/test/performance/benchmarks/broker-gcp/dev.config
+++ b/test/performance/benchmarks/broker-gcp/dev.config
@@ -6,7 +6,7 @@
 project_name: "Knative"
 benchmark_name: "Development - GCP Broker Latency & Throughput"
 description: "Measure latency and throughput of the Google Cloud Broker."
-benchmark_key: ''
+benchmark_key: '5687915277451264'
 
 # Human owners for manual benchmark adjustments.
 owner_list: "grantrodgers@google.com"
