--- a/hack/crdgeneration/snippets/subscribable_v1beta1.yaml
+++ b/hack/crdgeneration/snippets/subscribable_v1beta1.yaml
@@ -10,9 +10,9 @@ subscribers:
         minLength: 1
       generation:
         type: integer
-      subscriberURI:
+      subscriberUri:
         type: string
-      replyURI:
+      replyUri:
         type: string
       delivery:
         type: object
