--- a/test/performance/benchmarks/channel-pubsub/continuous/100-channel-perf-setup.yaml
+++ b/test/performance/benchmarks/channel-pubsub/continuous/100-channel-perf-setup.yaml
@@ -67,7 +67,7 @@ roleRef:
 
 ---
 
-apiVersion: messaging.cloud.google.com/v1alpha1
+apiVersion: messaging.cloud.google.com/v1beta1
 kind: Channel
 metadata:
   name: pubsub-test-channel
@@ -76,14 +76,14 @@ metadata:
 ---
 
 
-apiVersion: messaging.knative.dev/v1alpha1
+apiVersion: messaging.knative.dev/v1beta1
 kind: Subscription
 metadata:
   name: pubsub-test-channel-sub
   namespace: default
 spec:
   channel:
-    apiVersion: messaging.cloud.google.com/v1alpha1
+    apiVersion: messaging.cloud.google.com/v1beta1
     kind: Channel
     name: pubsub-test-channel
   subscriber:
