Channel v1beta1 Fixes (#959)
* Add the messaging.knative.dev/subscribable annotation to Channel.

This allows the correct creation of Subscriptions on the Channels.

* hack/update-codegen.sh

* Only set the subscribable annotation for v1beta1 defaulting if it is not already set.

* Change CronJobSource to PingSource.

* Inline SubscribableSpec.

* Add v1beta1 Channels to the E2E tests.

* Add a warning message about changing the Channel's storage version needing to update the code constant too.

* Don't override in v1alpha1 either.

* Move the temp directory outside of the repo root.

--- a/config/core/resources/channel.yaml
+++ b/config/core/resources/channel.yaml
@@ -61,6 +61,9 @@ spec:
   versions:
     - name: v1alpha1
       served: true
+      # Note that the storage version here _must_ match StoredChannelVersion in
+      # pkg/apis/messaging/internal/constants.go. If the storage version is changing here, update
+      # the constant in code too.
       storage: true
       schema:
         openAPIV3Schema:
@@ -232,29 +235,26 @@ spec:
                     ID of the Google Cloud Project to own the Pub/Sub credentials. E.g.
                     'my-project-1234' rather than its display name, 'My Project' or its number
                     '1234567890'. If omitted uses the Project ID from the GKE cluster metadata service.
-                subscribable:
-                  type: object
-                  properties:
-                    subscribers:
-                      type: array
-                      items:
+                subscribers:
+                  type: array
+                  items:
+                    type: object
+                    required:
+                      - uid
+                    properties:
+                      uid:
+                        type: string
+                        minLength: 1
+                      generation:
+                        type: integer
+                      subscriberUri:
+                        type: string
+                      replyUri:
+                        type: string
+                      delivery:
                         type: object
-                        required:
-                          - uid
                         properties:
-                          uid:
-                            type: string
-                            minLength: 1
-                          generation:
-                            type: integer
-                          subscriberURI:
-                            type: string
-                          replyURI:
-                            type: string
-                          delivery:
-                            type: object
-                            properties:
-                              deadLetterSink:
+                          deadLetterSink:
                                 type: object
                                 properties:
                                   ref:
@@ -270,12 +270,12 @@ spec:
                                         type: string
                                   uri:
                                     type: string
-                              retry:
-                                type: integer
-                              backoffPolicy:
-                                type: string
-                              backoffDelay:
-                                type: string
+                          retry:
+                            type: integer
+                          backoffPolicy:
+                            type: string
+                          backoffDelay:
+                            type: string
             status:
               type: object
               properties:
