Create a perf benchmark for the gcp broker

--- a/test/performance/benchmarks/broker-gcp/prod.config
+++ b/test/performance/benchmarks/broker-gcp/prod.config
@@ -4,9 +4,9 @@
 # https://github.com/google/mako/blob/master/docs/CLI.md.
 
 project_name: "Knative"
-benchmark_name: "PubSub Channel Latency & Throughput"
-description: "Measure latency and throughput of channels."
-benchmark_key: '6246352530964480'
+benchmark_name: "GCP Broker Latency & Throughput"
+description: "Measure latency and throughput of the Google Cloud Broker"
+benchmark_key: '6352219144192000'
 
 # Human owners for manual benchmark adjustments.
 owner_list: "bkaplan@google.com"
