--- a/test/performance/benchmarks/broker-gcp/dev.config
+++ b/test/performance/benchmarks/broker-gcp/dev.config
@@ -1,12 +1,12 @@
-# Create this benchmark with the mako tool: mako create_benchmark prod.config
-# Update this benchmark with the mako tool: mako update_benchmark prod.config
+# Create this benchmark with the mako tool: mako create_benchmark dev.config
+# Update this benchmark with the mako tool: mako update_benchmark dev.config
 # Learn more about the mako tool at
 # https://github.com/google/mako/blob/master/docs/CLI.md.
 
 project_name: "Knative"
-benchmark_name: "PubSub Channel Latency & Throughput"
-description: "Measure latency and throughput of channels."
-benchmark_key: '6246352530964480'
+benchmark_name: "Development - GCP Broker Latency & Throughput"
+description: "Measure latency and throughput of the Google Cloud Broker."
+benchmark_key: '5687915277451264'
 
 # Human owners for manual benchmark adjustments.
 owner_list: "bkaplan@google.com"
@@ -25,9 +25,15 @@ owner_list: "rustemb@google.com"
 owner_list: "xiyue@google.com"
 owner_list: "zar@google.com"
 
-# GCP Service Accounts that can publish data to Mako. Since this is a prod
-# benchmark, only the CI account should be listed here.
+# Anyone can add their IAM robot here to publish to this benchmark.
 owner_list: "mako-job@knative-performance.iam.gserviceaccount.com"
+# All dev robot accounts go here:
+owner_list: "mako-upload@cshou-playground.iam.gserviceaccount.com"
+owner_list: "mako-upload@grantrodgers-crd.iam.gserviceaccount.com"
+owner_list: "mako-upload@gracegao-knative-gcp-testing.iam.gserviceaccount.com"
+owner_list: "mako-upload@knative-project-228222.iam.gserviceaccount.com"
+owner_list: "mako-upload@ngiraldo-knative-dev.iam.gserviceaccount.com"
+owner_list: "mako-upload@xiyue-knative-project.iam.gserviceaccount.com"
 
 # Define the name and type for x-axis of run charts
 input_value_info: {
