--- a/test/performance/benchmarks/broker-pubsub/prod.config
+++ b/test/performance/benchmarks/broker-pubsub/prod.config
@@ -9,15 +9,24 @@ description: "Measure latency and throughput of the broker using various channel
 benchmark_key: '6592390798245888'
 
 # Human owners for manual benchmark adjustments.
-owner_list: "grantrodgers@google.com"
+owner_list: "bkaplan@google.com"
 owner_list: "chizhg@google.com"
-owner_list: "xiyue@google.com"
-owner_list: "gracegao@google.com"
-owner_list: "nachocano@google.com"
+owner_list: "conliu@google.com"
 owner_list: "cshou@google.com"
+owner_list: "danyinggu@google.com"
+owner_list: "elemar@google.com"
+owner_list: "gracegao@google.com"
+owner_list: "grantrodgers@google.com"
+owner_list: "harwayne@google.com"
+owner_list: "ianmi@google.com"
+owner_list: "nachocano@google.com"
 owner_list: "ngiraldo@google.com"
+owner_list: "rustemb@google.com"
+owner_list: "xiyue@google.com"
+owner_list: "zar@google.com"
 
-# Anyone can add their IAM robot here to publish to this benchmark.
+# GCP Service Accounts that can publish data to Mako. Since this is a prod
+# benchmark, only the CI account should be listed here.
 owner_list: "mako-job@knative-performance.iam.gserviceaccount.com"
 
 # Define the name and type for x-axis of run charts
