--- a/test/performance/benchmarks/channel-pubsub/dev.config
+++ b/test/performance/benchmarks/channel-pubsub/dev.config
@@ -9,22 +9,30 @@ description: "Measure latency and throughput of channels."
 benchmark_key: '6736782773190656'
 
 # Human owners for manual benchmark adjustments.
-owner_list: "grantrodgers@google.com"
+owner_list: "bkaplan@google.com"
 owner_list: "chizhg@google.com"
-owner_list: "xiyue@google.com"
-owner_list: "gracegao@google.com"
-owner_list: "nachocano@google.com"
+owner_list: "conliu@google.com"
 owner_list: "cshou@google.com"
+owner_list: "danyinggu@google.com"
+owner_list: "elemar@google.com"
+owner_list: "gracegao@google.com"
+owner_list: "grantrodgers@google.com"
+owner_list: "harwayne@google.com"
+owner_list: "ianmi@google.com"
+owner_list: "nachocano@google.com"
 owner_list: "ngiraldo@google.com"
+owner_list: "rustemb@google.com"
+owner_list: "xiyue@google.com"
+owner_list: "zar@google.com"
 
 # Anyone can add their IAM robot here to publish to this benchmark.
 owner_list: "mako-job@knative-performance.iam.gserviceaccount.com"
-# This is grantrodgers' robot:
-owner_list: "mako-upload@grantrodgers-crd.iam.gserviceaccount.com"
-owner_list: "mako-upload@xiyue-knative-project.iam.gserviceaccount.com"
-owner_list: "mako-upload@gracegao-knative-gcp-testing.iam.gserviceaccount.com"
+# All dev robot accounts go here:
 owner_list: "mako-upload@cshou-playground.iam.gserviceaccount.com"
+owner_list: "mako-upload@grantrodgers-crd.iam.gserviceaccount.com"
+owner_list: "mako-upload@gracegao-knative-gcp-testing.iam.gserviceaccount.com"
 owner_list: "mako-upload@ngiraldo-knative-dev.iam.gserviceaccount.com"
+owner_list: "mako-upload@xiyue-knative-project.iam.gserviceaccount.com"
 
 # Define the name and type for x-axis of run charts
 input_value_info: {
