fixed the bypass broker bug and modified the test framework of e2e te… (#1113)
* fixed the bypass broker bug and modified the test framework of e2e tests of sources with broker

* changed pubsub_target and target to use knockdown.config

* fixed nits

--- a/test/test_images/pubsub_target/pod.yaml
+++ b/test/test_images/pubsub_target/pod.yaml
@@ -15,9 +15,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: storage_target
+  name: pubsub_target
 spec:
   containers:
-    - name: storage_target
-      image: ko://github.com/google/knative-gcp/test/test_images/storage_target
+    - name: pubsub_target
+      image: ko://github.com/google/knative-gcp/test/test_images/pubsub_target
 
