--- a/test/test_images/pubsub_receiver/pod.yaml
+++ b/test/test_images/pubsub_receiver/pod.yaml
@@ -15,9 +15,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: storage_target
+  name: pubsub_receiver
 spec:
   containers:
-    - name: storage_target
-      image: ko://github.com/google/knative-gcp/test/test_images/storage_target
-
+    - name: pubsub_receiver
+      image: ko://github.com/google/knative-gcp/test/test_images/pubsub_receiver
