--- a/config/core/resources/channel.yaml
+++ b/config/core/resources/channel.yaml
@@ -72,12 +72,12 @@ spec:
             spec:
               type: object
               properties:
-                googleServiceAccount:
+                serviceAccountName:
                   type: string
                   description: >
-                    GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service
-                    account must be a valid Google service account (see
-                    https://cloud.google.com/iam/docs/service-accounts).
+                    k8s service account used to bind to a google service account to poll the Cloud Pub/Sub Subscription.
+                    The value of the k8s service account must be a valid DNS subdomain name.
+                    (see https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names)
                 secret:
                   type: object
                   description: >
@@ -209,12 +209,12 @@ spec:
             spec:
               type: object
               properties:
-                googleServiceAccount:
+                serviceAccountName:
                   type: string
                   description: >
-                    GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service
-                    account must be a valid Google service account (see
-                    https://cloud.google.com/iam/docs/service-accounts).
+                    k8s service account used to bind to a google service account to poll the Cloud Pub/Sub Subscription.
+                    The value of the k8s service account must be a valid DNS subdomain name.
+                    (see https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names)
                 secret:
                   type: object
                   description: >
