--- a/config/core/resources/old_topic.yaml
+++ b/config/core/resources/old_topic.yaml
@@ -69,10 +69,10 @@ spec:
           required:
             - topic
           properties:
-            googleServiceAccount:
+            serviceAccountName:
               type: string
-              description: "GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service account must be a valid Google service account (see https://cloud.google.com/iam/docs/service-accounts)."
-            secret:
+              description: "k8s service account used to bind to a google service account to poll the Cloud Pub/Sub Subscription. The value of the k8s service account must be a valid DNS subdomain name. (see https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names)"
+           secret:
               type: object
               description: "Credential used to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
               properties:
