--- a/config/core/resources/channel.yaml
+++ b/config/core/resources/channel.yaml
@@ -76,8 +76,14 @@ spec:
                   type: string
                   description: >
                     GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service
-                    account must be a valid Google service account (see
+                    account must be a valid Google service account. (see
                     https://cloud.google.com/iam/docs/service-accounts).
+                serviceAccountName:
+                  type: string
+                  description: >
+                    k8s service account used to bind to a google service account to poll the Cloud Pub/Sub Subscription.
+                    The value of the k8s service account must be a valid DNS subdomain name.
+                    (see https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names)
                 secret:
                   type: object
                   description: >
@@ -209,12 +215,12 @@ spec:
             spec:
               type: object
               properties:
-                googleServiceAccount:
+                serviceAccountName:
                   type: string
                   description: >
-                    GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service
-                    account must be a valid Google service account (see
-                    https://cloud.google.com/iam/docs/service-accounts).
+                    Kubernetes service account used to bind to a google service account to poll the Cloud Pub/Sub Subscription.
+                    The value of the Kubernetes service account must be a valid DNS subdomain name.
+                    (see https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names)
                 secret:
                   type: object
                   description: >
