--- a/config/core/resources/cloudbuildsource.yaml
+++ b/config/core/resources/cloudbuildsource.yaml
@@ -104,8 +104,14 @@ spec:
               type: string
               description: >
                 GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service
-                account must be a valid Google service account (see
+                account must be a valid Google service account. (see
                 https://cloud.google.com/iam/docs/service-accounts).
+            serviceAccountName:
+              type: string
+              description: >
+                Kubernetes service account used to bind to a google service account to poll the Cloud Pub/Sub Subscription.
+                The value of the Kubernetes service account must be a valid DNS subdomain name.
+                (see https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names)
             secret:
               type: object
               description: >
