--- a/config/core/resources/cloudpubsubsource.yaml
+++ b/config/core/resources/cloudpubsubsource.yaml
@@ -12,7 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# This is a generated file, do not alter it.
+###########################################################################
+# This is a generated file, do not alter it.                              #
+# Alter the .gofmt.yaml equivalent and then run `hack/update-codegen.sh`. #
+###########################################################################
 
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -115,14 +118,14 @@ spec:
               type: string
               description: >
                 GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service
-                account must be a valid Google service account. (see
+                account must be a valid Google service account (see
                 https://cloud.google.com/iam/docs/service-accounts).
             serviceAccountName:
               type: string
               description: >
-                Kubernetes service account used to bind to a google service account to poll the Cloud Pub/Sub Subscription.
-                The value of the Kubernetes service account must be a valid DNS subdomain name.
-                (see https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names)
+                Kubernetes service account used to bind to a google service account to poll the Cloud Pub/Sub
+                Subscription. The value of the k8s service account must be a valid DNS subdomain name (see
+                https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names).
             secret:
               type: object
               description: >
