--- a/hack/crdgeneration/snippets/identity_spec_v1alpha1.yaml
+++ b/hack/crdgeneration/snippets/identity_spec_v1alpha1.yaml
@@ -4,3 +4,4 @@ googleServiceAccount:
     GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service
     account must be a valid Google service account (see
     https://cloud.google.com/iam/docs/service-accounts).
+{{- replace_with 0 "identity_spec_v1beta1" }}
