--- a/hack/crdgeneration/snippets/pubsub_spec.yaml
+++ b/hack/crdgeneration/snippets/pubsub_spec.yaml
@@ -14,9 +14,5 @@ secret:
       type: string
     optional:
       type: boolean
-project:
-  type: string
-  description: >
-    Google Cloud Project ID of the project into which the topic should be created. If omitted uses
-    the Project ID from the GKE cluster metadata service.
+{{- replace_with 0 "project" }}
 
