--- a/config/core/resources/brokercell.gofmt.yaml
+++ b/config/core/resources/brokercell.gofmt.yaml
@@ -11,11 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-###########################################################################
-# This is a generated file, do not alter it.                              #
-# Alter the .gofmt.yaml equivalent and then run `hack/update-codegen.sh`. #
-###########################################################################
+{{ replace_with 0 "generated_header" }}
 
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -36,22 +32,9 @@ spec:
   subresources:
     status: {}
   preserveUnknownFields: false
-  conversion:
-    strategy: Webhook
-    webhookClientConfig:
-      service:
-        name: webhook
-        namespace: cloud-run-events
+  {{- replace_with 2 "conversion_webhook" }}
   additionalPrinterColumns:
-    - name: Ready
-      type: string
-      JSONPath: ".status.conditions[?(@.type==\"Ready\")].status"
-    - name: Reason
-      type: string
-      JSONPath: ".status.conditions[?(@.type==\"Ready\")].reason"
-    - name: Age
-      type: date
-      JSONPath: .metadata.creationTimestamp
+    {{- replace_with 4 "ready_reason_age" }}
   versions:
     - name: v1alpha1
       served: true
@@ -65,30 +48,7 @@ spec:
         status:
           type: object
           properties:
-            observedGeneration:
-              type: integer
-              format: int64
-            conditions:
-              type: array
-              items:
-                type: object
-                properties:
-                  lastTransitionTime:
-                    # We use a string in the stored object but a wrapper object at runtime.
-                    type: string
-                  message:
-                    type: string
-                  reason:
-                    type: string
-                  severity:
-                    type: string
-                  status:
-                    type: string
-                  type:
-                    type: string
-                required:
-                  - type
-                  - status
+            {{- replace_with 12 "duck_status" }}
             ingressTemplate:
               type: string
               description: >
