--- a/config/core/resources/pullsubscription.yaml
+++ b/config/core/resources/pullsubscription.yaml
@@ -12,6 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+###########################################################################
+# This is a generated file, do not alter it.                              #
+# Alter the .gofmt.yaml equivalent and then run `hack/update-codegen.sh`. #
+###########################################################################
+
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -61,34 +66,15 @@ spec:
       type: object
       properties:
         spec:
-          # TODO: update the OpenAPI to be much more robust.
           type: object
           required:
             - sink
             - topic
           properties:
-            googleServiceAccount:
-              type: string
-              description: "GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service account must be a valid Google service account (see https://cloud.google.com/iam/docs/service-accounts)."
-            serviceAccountName:
-              type: string
-              description: "Kubernetes service account used to bind to a google service account to poll the Cloud Pub/Sub Subscription. The value of the Kubernetes service account must be a valid DNS subdomain name. (see https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names)"
-            secret:
-              type: object
-              description: "Credential used to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the Subscription, only to poll it. The value of the secret entry must be a service account key in the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys). Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'."
-              properties:
-                name:
-                  type: string
-                key:
-                  type: string
-                optional:
-                  type: boolean
-            project:
-              type: string
-              description: "ID of the Google Cloud Project that the Pub/Sub Topic exists in. E.g. 'my-project-1234' rather than its display name, 'My Project' or its number '1234567890'. If omitted uses the Project ID from the GKE cluster metadata service."
             sink:
               type: object
-              description: "Reference to an object that will resolve to a domain name to use as the sink."
+              description: >
+                Sink which receives the notifications.
               properties:
                 uri:
                   type: string
@@ -111,37 +97,103 @@ spec:
                     name:
                       type: string
                       minLength: 1
-            transformer:
-              type: object
-              description: "Reference to an object that will resolve to a domain name to use as the transformer."
-              x-kubernetes-preserve-unknown-fields: true
             ceOverrides:
               type: object
-              description: "Defines overrides to control modifications of the event sent to the sink."
+              description: >
+                Defines overrides to control modifications of the event sent to the sink.
               properties:
                 extensions:
                   type: object
-                  description: "Extensions specify what attribute are added or overridden on the outbound event. Each `Extensions` key-value pair are set on the event as an attribute extension independently."
+                  description: >
+                    Extensions specify what attribute are added or overridden on the outbound event. Each
+                    `Extensions` key-value pair are set on the event as an attribute extension independently.
                   x-kubernetes-preserve-unknown-fields: true
-            mode:
+            googleServiceAccount:
               type: string
-              enum: [CloudEventsBinary, CloudEventsStructured, PushCompatible]
-              description: "Mode defines the encoding and structure of the payload of when this PullSubscription invokes the sink. Default is CloudEventsBinary."
+              description: >
+                GCP service account used to poll the Cloud Pub/Sub Subscription. The value of the service
+                account must be a valid Google service account (see
+                https://cloud.google.com/iam/docs/service-accounts).
+            serviceAccountName:
+              type: string
+              description: >
+                Kubernetes service account used to bind to a google service account to poll the Cloud Pub/Sub
+                Subscription. The value of the k8s service account must be a valid DNS subdomain name (see
+                https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#dns-subdomain-names).
+            secret:
+              type: object
+              description: >
+                Credential used to poll the Cloud Pub/Sub Subscription. It is not used to create or delete the
+                Subscription, only to poll it. The value of the secret entry must be a service account key in
+                the JSON format (see https://cloud.google.com/iam/docs/creating-managing-service-account-keys).
+                Defaults to secret.name of 'google-cloud-key' and secret.key of 'key.json'.
+              properties:
+                name:
+                  type: string
+                key:
+                  type: string
+                optional:
+                  type: boolean
+            project:
+              type: string
+              description: >
+                Google Cloud Project ID of the project into which the topic should be created. If omitted uses
+                the Project ID from the GKE cluster metadata service.
             topic:
               type: string
-              description: "ID of the Cloud Pub/Sub Topic to Subscribe to. It must be in the form of the unique identifier within the project, not the entire name. E.g. it must be 'laconia', not 'projects/my-gcp-project/topics/laconia'."
+              description: >
+                ID of the Cloud Pub/Sub Topic to Subscribe to. It must be in the form of the unique
+                identifier within the project, not the entire name. E.g. it must be 'laconia', not
+                'projects/my-gcp-project/topics/laconia'.
             ackDeadline:
               type: string
-              description:  "The default maximum time after a subscriber receives a message before the subscriber should acknowledge the message. Defaults to `30s`. Valid time units are `s`, `m`, `h`. The minimum deadline you can specify is 0 seconds. The maximum deadline you can specify is 600 seconds (10 minutes)."
+              description: >
+                The default maximum time after a subscriber receives a message before the subscriber
+                should acknowledge the message. Defaults to `30s`. Valid time units are `s`, `m`,
+                `h`. The minimum deadline you can specify is 0 seconds. The maximum deadline you can
+                specify is 600 seconds (10 minutes).
             retainAckedMessages:
               type: boolean
-              description: "Whether to retain acknowledged messages. If true, acknowledged messages will not be expunged until they fall out of the RetentionDuration window."
+              description: >
+                Whether to retain acknowledged messages. If true, acknowledged messages will not be
+                expunged until they fall out of the RetentionDuration window.
             retentionDuration:
               type: string
-              description: "How long to retain messages in backlog, from the time of publish. If retainAckedMessages is true, this duration affects the retention of acknowledged messages, otherwise only unacknowledged messages are retained. Defaults to 7 days (`168h`). Cannot be longer than 7 days or shorter than 10 minutes. Valid time units are `s`, `m`, `h`."
+              description: >
+                How long to retain messages in backlog, from the time of publish. If
+                retainAckedMessages is true, this duration affects the retention of acknowledged
+                messages, otherwise only unacknowledged messages are retained. Defaults to 7 days
+                (`168h`). Cannot be longer than 7 days or shorter than 10 minutes. Valid time units
+                are `s`, `m`, `h`.
+            transformer:
+              type: object
+              properties:
+                ref:
+                  type: object
+                  properties:
+                    kind:
+                      type: string
+                    namespace:
+                      type: string
+                    name:
+                      type: string
+                    apiVersion:
+                      type: string
+                uri:
+                  type: string
+            mode:
+              type: string
+              enum:
+                - CloudEventsBinary
+                - CloudEventsStructured
+                - PushCompatible
+              description: >
+                Mode defines the encoding and structure of the payload of when this PullSubscription
+                invokes the sink. Default is CloudEventsBinary.
             adapterType:
               type: string
-              description: "AdapterType determines the type of receive adapter that a PullSubscription uses."
+              description: >
+                AdapterType determines the type of receive adapter that a PullSubscription uses.
         status:
           type: object
           properties:
@@ -149,11 +201,12 @@ spec:
               type: integer
               format: int64
             conditions:
+              type: array
               items:
+                type: object
                 properties:
                   lastTransitionTime:
-                    # we use a string in the stored object but a wrapper object
-                    # at runtime.
+                    # We use a string in the stored object but a wrapper object at runtime.
                     type: string
                   message:
                     type: string
@@ -168,8 +221,6 @@ spec:
                 required:
                   - type
                   - status
-                type: object
-              type: array
             serviceAccountName:
               type: string
             sinkUri:
@@ -191,3 +242,9 @@ spec:
               type: string
             transformerUri:
               type: string
+              description: >
+                The URI of the active transformer configured for this PullSubscription.
+            subscriptionId:
+              type: string
+              description: >
+                The ID of the PullSubscription created in GCP Pub/Sub.
