--- a/test/performance/benchmarks/broker-gcp/100-broker-gcp-setup.yaml
+++ b/test/performance/benchmarks/broker-gcp/100-broker-gcp-setup.yaml
@@ -12,6 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: config-broker
+data:
+  channelTemplateSpec: ""
+
+---
+
 apiVersion: eventing.knative.dev/v1alpha1
 kind: Broker
 metadata:
@@ -19,7 +28,11 @@ metadata:
   namespace: default
   annotations:
     eventing.knative.dev/broker.class: googlecloud
-spec: {}
+spec:
+  config:
+    apiVersion: v1
+    kind: ConfigMap
+    name: config-broker
 
 ---
 
