--- a/test/performance/benchmarks/broker-gcp/continuous/100-broker-gcp-setup.yaml
+++ b/test/performance/benchmarks/broker-gcp/continuous/100-broker-gcp-setup.yaml
@@ -12,6 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: config-broker
+data:
+  channelTemplateSpec: ""
+
+---
+
 apiVersion: eventing.knative.dev/v1alpha1
 kind: Broker
 metadata:
@@ -19,7 +28,11 @@ metadata:
   namespace: default
   annotations:
     eventing.knative.dev/broker.class: googlecloud
-spec: {}
+spec:
+  config:
+    apiVersion: v1
+    kind: ConfigMap
+    name: config-broker
 
 ---
 
@@ -38,6 +51,30 @@ spec:
 
 ---
 
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: eventing-broker-ingress
+  namespace: default
+
+---
+
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: eventing-broker-filter
+  namespace: default
+
+---
+
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: perf-pubsub
+  namespace: default
+
+---
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -49,6 +86,70 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: eventing-broker-ingress
+  namespace: default
+subjects:
+  - kind: ServiceAccount
+    name: eventing-broker-ingress
+    namespace: default
+roleRef:
+  kind: ClusterRole
+  name: eventing-broker-ingress
+  apiGroup: rbac.authorization.k8s.io
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: eventing-broker-filter
+  namespace: default
+subjects:
+  - kind: ServiceAccount
+    name: eventing-broker-filter
+    namespace: default
+roleRef:
+  kind: ClusterRole
+  name: eventing-broker-filter
+  apiGroup: rbac.authorization.k8s.io
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: eventing-config-reader-default-eventing-broker-ingress
+  namespace: knative-eventing
+subjects:
+  - kind: ServiceAccount
+    name: eventing-broker-ingress
+    namespace: default
+roleRef:
+  kind: ClusterRole
+  name: eventing-config-reader
+  apiGroup: rbac.authorization.k8s.io
+
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: eventing-config-reader-default-eventing-broker-filter
+  namespace: knative-eventing
+subjects:
+  - kind: ServiceAccount
+    name: eventing-broker-filter
+    namespace: default
+roleRef:
+  kind: ClusterRole
+  name: eventing-config-reader
   apiGroup: rbac.authorization.k8s.io
 
 ---
