remmove unnecessary spec

--- a/test/performance/benchmarks/broker-gcp/100-broker-gcp-setup.yaml
+++ b/test/performance/benchmarks/broker-gcp/100-broker-gcp-setup.yaml
@@ -12,15 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: config-broker
-data:
-  channelTemplateSpec: ""
-
----
-
 apiVersion: eventing.knative.dev/v1beta1
 kind: Broker
 metadata:
@@ -28,11 +19,7 @@ metadata:
   namespace: default
   annotations:
     eventing.knative.dev/broker.class: googlecloud
-spec:
-  config:
-    apiVersion: v1
-    kind: ConfigMap
-    name: config-broker
+spec: {}
 
 ---
 
