--- a/pkg/reconciler/brokercell/testingdata/fanout_hpa.yaml
+++ b/pkg/reconciler/brokercell/testingdata/fanout_hpa.yaml
@@ -36,8 +36,12 @@ spec:
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: 95
+      target:
+        type: Utilization
+        averageUtilization: 95
   - type: Resource
     resource:
       name: memory
-      targetAverageValue: 900Mi
+      target:
+        type: AverageValue
+        averageValue: 900Mi
