--- a/config/core/serviceaccount.yaml
+++ b/config/core/serviceaccount.yaml
@@ -29,3 +29,14 @@ metadata:
   namespace: cloud-run-events
   labels:
     events.cloud.google.com/release: devel
+
+---
+
+# Service account used by GCP broker data plane.
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: broker
+  namespace: cloud-run-events
+  labels:
+    events.cloud.google.com/release: devel
