--- a/config/core/roles/rolebinding.yaml
+++ b/config/core/roles/rolebinding.yaml
@@ -27,3 +27,21 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: cloud-run-events-controller
+
+---
+# RoleBinding for GCP broker data plane.
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: cloud-run-events-broker
+  namespace: cloud-run-events
+  labels:
+    events.cloud.google.com/release: devel
+subjects:
+  - kind: ServiceAccount
+    name: broker
+    namespace: cloud-run-events
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: cloud-run-events-broker
