add permission for autoscaling

--- a/config/core/roles/clusterrole.yaml
+++ b/config/core/roles/clusterrole.yaml
@@ -89,6 +89,12 @@ rules:
   verbs: *everything
 
 - apiGroups:
+    - autoscaling
+  resources:
+    - horizontalpodautoscalers
+  verbs: *everything
+
+- apiGroups:
     - serving.knative.dev
   resources:
     - services
