Use MTChannelBasedBroker broker class
ChannelBasedBroker class is removed from upstream eventing.

--- a/test/performance/benchmarks/broker-pubsub/continuous/100-broker-pubsub-setup.yaml
+++ b/test/performance/benchmarks/broker-pubsub/continuous/100-broker-pubsub-setup.yaml
@@ -29,7 +29,7 @@ metadata:
   name: pubsub
   namespace: default
   annotations:
-    eventing.knative.dev/broker.class: ChannelBasedBroker
+    eventing.knative.dev/broker.class: MTChannelBasedBroker
 spec:
   config:
     apiVersion: v1
